fixed z-index issues

--- a/app/assets/stylesheets/detentions.css.sass
+++ b/app/assets/stylesheets/detentions.css.sass
@@ -66,6 +66,7 @@ a
   left: 0
   top: 0
   padding: 0
+  z-index: 999
   height: 100%
   color: #adb1b3
   .title
@@ -396,6 +397,7 @@ nav
   position: fixed
   top: 0
   display: table
+  z-index: 1000
   left: 0
   background: rgba(0, 0, 0, 0.7)
   text-align: center
